[gd_scene format=3 uid="uid://djpq7oopq8hwe"]

[ext_resource type="Script" uid="uid://cfopnqmqo8rlp" path="res://scenes/game/settings.gd" id="1_t7dv6"]
[ext_resource type="Texture2D" uid="uid://dgmyct4v273ms" path="res://scenes/ui/grabber.png" id="2_qunfc"]
[ext_resource type="Texture2D" uid="uid://cq6sxh7hasalb" path="res://scenes/ui/grabbed.png" id="3_i1rig"]
[ext_resource type="FontFile" uid="uid://ckihdh4j0grij" path="res://fonts/KohSantepheap-Regular.ttf" id="4_ll5u5"]
[ext_resource type="FontFile" uid="uid://r28miws75oyd" path="res://fonts/ZT Formom.otf" id="5_xbp8e"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vdywr"]
bg_color = Color(0.24313726, 0.27058825, 0.98039216, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_k1na2"]
bg_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_otnwt"]
bg_color = Color(0.24313726, 0.27058825, 0.98039216, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3xj4h"]
bg_color = Color(0.24313726, 0.27058825, 0.98039216, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5v6r0"]
content_margin_top = 3.0
content_margin_bottom = 3.0
bg_color = Color(1, 1, 1, 1)
draw_center = false
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(1, 1, 1, 1)
expand_margin_left = 2.0
expand_margin_top = 2.0
expand_margin_right = 2.0
expand_margin_bottom = 2.0

[sub_resource type="FontVariation" id="FontVariation_5jirj"]
base_font = ExtResource("4_ll5u5")
spacing_glyph = -1
spacing_space = 1

[sub_resource type="FontVariation" id="FontVariation_vdywr"]
base_font = ExtResource("5_xbp8e")
spacing_glyph = -2
spacing_space = -2
spacing_top = -8
spacing_bottom = -11

[sub_resource type="Theme" id="Theme_5jirj"]
default_font = SubResource("FontVariation_vdywr")
Button/colors/font_color = Color(0.24313726, 0.27058825, 0.98039216, 1)
Button/colors/font_hover_color = Color(0.95, 0.95, 0.95, 1)
Button/colors/font_hover_pressed_color = Color(1, 0.45000005, 0, 1)
Button/colors/font_pressed_color = Color(1, 0.45000005, 0, 1)
Button/font_sizes/font_size = 48
Button/styles/hover = SubResource("StyleBoxFlat_vdywr")
Button/styles/normal = SubResource("StyleBoxFlat_k1na2")
Button/styles/pressed = SubResource("StyleBoxFlat_vdywr")
HSlider/icons/grabber = ExtResource("2_qunfc")
HSlider/icons/grabber_highlight = ExtResource("3_i1rig")
HSlider/styles/grabber_area = SubResource("StyleBoxFlat_otnwt")
HSlider/styles/grabber_area_highlight = SubResource("StyleBoxFlat_3xj4h")
HSlider/styles/slider = SubResource("StyleBoxFlat_5v6r0")
Label/colors/font_color = Color(1, 1, 1, 1)
Label/font_sizes/font_size = 20
Label/fonts/font = SubResource("FontVariation_5jirj")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_uyinl"]
content_margin_left = 3.0
content_margin_right = 3.0
bg_color = Color(1, 1, 1, 1)

[node name="Settings" type="Control" unique_id=1472289679]
custom_minimum_size = Vector2(900, 0)
layout_mode = 3
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 0
grow_vertical = 2
script = ExtResource("1_t7dv6")

[node name="VBoxContainer" type="VBoxContainer" parent="." unique_id=1760906679]
custom_minimum_size = Vector2(500, 0)
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_5jirj")
theme_override_constants/separation = 50
alignment = 1

[node name="SensSlider" type="HSlider" parent="VBoxContainer" unique_id=1125229960]
texture_filter = 1
layout_mode = 2
min_value = 0.005
max_value = 0.25
step = 0.005
value = 0.049999999999999996

[node name="Label" type="Label" parent="VBoxContainer/SensSlider" unique_id=165901283]
show_behind_parent = true
layout_mode = 0
offset_left = -2.0
offset_top = -25.0
offset_right = 154.0
offset_bottom = 2.0
theme_override_colors/font_color = Color(0.24313726, 0.27058825, 0.98039216, 1)
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxFlat_uyinl")
text = "Mouse sensitivity"
vertical_alignment = 2
uppercase = true

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer" unique_id=140987386]
layout_mode = 2
theme_override_constants/separation = 68

[node name="MusicVolume" type="HSlider" parent="VBoxContainer/HBoxContainer" unique_id=1800973807]
texture_filter = 1
layout_mode = 2
size_flags_horizontal = 3
max_value = 1.0
step = 0.005
value = 0.8

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/MusicVolume" unique_id=1947505732]
show_behind_parent = true
layout_mode = 0
offset_left = -2.0
offset_top = -25.0
offset_right = 64.0
offset_bottom = 2.0
theme_override_colors/font_color = Color(0.24313726, 0.27058825, 0.98039216, 1)
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxFlat_uyinl")
text = "MUSIC"
vertical_alignment = 2

[node name="SFXVolume" type="HSlider" parent="VBoxContainer/HBoxContainer" unique_id=964292248]
texture_filter = 1
layout_mode = 2
size_flags_horizontal = 3
max_value = 1.0
step = 0.005
value = 0.8

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/SFXVolume" unique_id=607319117]
show_behind_parent = true
layout_mode = 0
offset_left = -2.0
offset_top = -25.0
offset_right = 38.0
offset_bottom = 2.0
theme_override_colors/font_color = Color(0.24313726, 0.27058825, 0.98039216, 1)
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxFlat_uyinl")
text = "SFX"
vertical_alignment = 2

[connection signal="drag_ended" from="VBoxContainer/SensSlider" to="." method="_on_sens_slider_drag_ended"]
[connection signal="drag_ended" from="VBoxContainer/HBoxContainer/MusicVolume" to="." method="_on_music_volume_drag_ended"]
[connection signal="value_changed" from="VBoxContainer/HBoxContainer/MusicVolume" to="." method="_on_music_volume_value_changed"]
[connection signal="drag_ended" from="VBoxContainer/HBoxContainer/SFXVolume" to="." method="_on_sfx_volume_drag_ended"]
[connection signal="value_changed" from="VBoxContainer/HBoxContainer/SFXVolume" to="." method="_on_sfx_volume_value_changed"]
